--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@openzeppelin/contracts": "^4.5.0",
+    "@rainbow-me/rainbowkit": "^0.5.1",
     "dotenv": "^16.0.1",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
@@ -20,6 +21,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "wagmi": "^0.6.5",
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
