--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nftfi-solv",
+  "name": "paylock",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^0.4.2",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.6",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@openzeppelin/contracts": "^4.5.0",
@@ -21,6 +25,11 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-nice-avatar": "^1.2.4",
+    "react-number-format": "^5.0.0-beta.5",
+    "react-select": "^5.4.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.3",
     "wagmi": "^0.6.5",
     "web3modal": "^1.9.5"
   },
