--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@openzeppelin/contracts": "^4.5.0",
     "@rainbow-me/rainbowkit": "^0.5.1",
+    "axios": "^1.1.2",
     "defender-relay-client": "^1.31.1",
     "dotenv": "^16.0.1",
     "ethereum-waffle": "^3.4.0",
