Added deploy npm command

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy_Mumbai": "npx hardhat run scripts/deploy.js --network polygonMumbai "
   },
   "dependencies": {
     "@chainlink/contracts": "^0.4.2",
