--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-select": "^5.4.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
+    "swiper": "^8.4.4",
     "wagmi": "^0.6.5",
     "web3modal": "^1.9.5"
   },
