--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "swiper": "^8.4.4",
+    "use-lodash-debounce": "^1.3.0",
     "wagmi": "^0.6.5",
     "web3modal": "^1.9.5"
   },
