--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "swiper": "^8.4.4",
+    "twilio": "^3.83.1",
     "use-lodash-debounce": "^1.3.0",
     "wagmi": "^0.6.5",
     "web3modal": "^1.9.5"
