--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-dom": "18.2.0",
     "react-nice-avatar": "^1.2.4",
     "react-number-format": "^5.0.0-beta.5",
+    "react-phone-number-input": "^3.2.12",
     "react-select": "^5.4.0",
+    "react-toastify": "^9.1.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "swiper": "^8.4.4",
