--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@openzeppelin/contracts": "^4.5.0",
     "@rainbow-me/rainbowkit": "^0.5.1",
+    "@vercel/analytics": "^0.1.5",
     "axios": "^1.1.3",
     "defender-autotask-client": "^1.34.0",
     "defender-relay-client": "^1.31.1",
